--- a/_posts/2020-09-20-plot-makeover-1/plot-makeover-1.Rmd
+++ b/_posts/2020-09-20-plot-makeover-1/plot-makeover-1.Rmd
@@ -46,7 +46,7 @@ Our plot-in-the-wild comes from the recent [AMLAP 2020](https://amlap2020.github
 knitr::include_graphics("plot.png")
 ```
 
-What we have is a 2-by-3 grid of 6 pairs of bar plots with error bars, grouped at three levels which are mapped in the following way:
+What we have is 6 pairs of barplots with error bars, laid out in a 2-by-3 grid. The total of 12 bars are grouped at three levels which are mapped in the following way:
 
 - First level is mapped to the <span class="sc">grid column</span>.
 
@@ -54,7 +54,7 @@ What we have is a 2-by-3 grid of 6 pairs of bar plots with error bars, grouped a
 
 - Third level is mapped to the <span class="sc">x-axis</span>.
 
-To get a better sense of what they did, and to make data for my new plot, I have recreated the original plot below:^[But note that this is likely **not** how the original plot was generated: the authors were likely feeding ggplot2 with the raw data (involving 1s and 0s in this case), but here I am just grabbing the summary statistic that was mapped to the bar aesthetic (hence my decision to name the y variable `barheight`).]
+To get a better sense of what they did, and to make data for the plot makeover, I have recreated the original plot below:^[But note that this is likely **not** how the original plot was generated: the authors were likely feeding ggplot2 with the raw data (involving 1s and 0s in this case), but here I am just grabbing the summary statistic that was mapped to the bar aesthetic (hence my decision to name the y variable `barheight`).]
 
 **1. Data**
 
@@ -129,7 +129,7 @@ knitr::include_graphics("plot.png")
 
 ## After
 
-I actually couldn't settle on one final product,^[I ran the first plot by a friend who has a degree in design, and she recommended several changes that eventually ended up being the second plot. Some major pointers were removing border lines from the legend, removing x-axis tick marks, and applying color/shade.] so here are two plots that incorporate the changes that I wanted to make. I think that both look great and you may prefer one style over the other depending on what relationships/comparisons you want your graph to emphasize.
+I actually couldn't settle on one final product^[I ran the first plot by a friend who has a degree in design, and she recommended several changes that eventually ended up being the second plot. Some major pointers were removing border lines from the legend, removing x-axis tick marks, and applying color/shade.] so here are two plots that incorporate the changes that I wanted to make. I think that both look nice and you may prefer one style over the other depending on what relationships/comparisons you want your graph to emphasize.
 
 
 ### Point-line plot
@@ -231,7 +231,7 @@ df %>%
 ```
 
 <aside>
-In this second version, I removed `guides()` and distributed its arguments across `labs()` and `theme()`. I kinda like this layout of having a fat `theme()` and it's not too hard to read if you group and sort the arguments.
+In this second version, I removed `guides()` and distributed its arguments across `labs()` and `theme()`. I kinda like this layout of having a fat `theme()`. It's also not too hard to read if you group and sort the arguments.
 </aside>
 
 ```{r after_bar_plot, echo=FALSE, layout = 'l-body-outset', preview = TRUE}
