--- a/_posts/2020-09-12-videos-in-reactable/2020-09-12-videos-in-reactable.Rmd
+++ b/_posts/2020-09-12-videos-in-reactable/2020-09-12-videos-in-reactable.Rmd
@@ -44,7 +44,7 @@ So I turned the spreadsheet into a {reactable} table with rows that can expand t
 Try it out for yourself!
 
 
-```{r reactable, echo=FALSE, message=FALSE, warning=FALSE, layout='l-body-outset'}
+```{r reactable, echo=FALSE, message=FALSE, warning=FALSE, layout='l-page'}
 library(tidyverse)
 library(htmltools)
 library(reactable)
