--- a/_posts/2020-09-26-demystifying-stat-layers-ggplot2/demystifying-stat-layers-ggplot2.Rmd
+++ b/_posts/2020-09-26-demystifying-stat-layers-ggplot2/demystifying-stat-layers-ggplot2.Rmd
@@ -250,7 +250,7 @@ So not only is it inefficient to create a transformed dataframe that suits the n
 
 What we should do instead is to _take advantage_ of the fact that our original data `simple_data` is the **common denominator** of `simple_data_bar` and `simple_data_errorbar`!
 
-Wouldn't it be nice if you could just pass in the origin data containing all observations (`simple_data`) and have each layer internally transform the data in appropriate ways to suit the needs of the geom for that layer? 
+Wouldn't it be nice if you could just pass in the original data containing all observations (`simple_data`) and have each layer internally transform the data in appropriate ways to suit the needs of the geom for that layer? 
 
 Oh, so you mean something like this?
 
