code output style changes

--- a/_posts/2020-06-07-correlation-parameter-mem/correlation-parameter-mem.Rmd
+++ b/_posts/2020-06-07-correlation-parameter-mem/correlation-parameter-mem.Rmd
@@ -5,7 +5,7 @@ description: |
 categories:
   - statistics
   - mixed-effects models
-base_url: yjunechoe.github.io
+base_url: https://yjunechoe.github.io
 author:
   - name: June Choe
     affiliation: University of Pennsylvania Linguistics
