--- a/_posts/2020-07-20-shiny-tips-1/2020-07-20-shiny-tips-1.Rmd
+++ b/_posts/2020-07-20-shiny-tips-1/2020-07-20-shiny-tips-1.Rmd
@@ -4,7 +4,7 @@ description: |
   %||%, imap() + {shinybusy}, and user inputs in modalDialog()
 categories:
   - shiny
-base_url: yjunechoe.github.io
+base_url: https://yjunechoe.github.io
 preview: preview.png
 author:
   - name: June Choe
