--- a/_posts/2020-07-29-six-years-of-my-spotify-playlists/2020-07-29-six-years-of-my-spotify-playlists.Rmd
+++ b/_posts/2020-07-29-six-years-of-my-spotify-playlists/2020-07-29-six-years-of-my-spotify-playlists.Rmd
@@ -8,7 +8,7 @@ categories:
   - spotifyr
   - data wrangling
   - data visualization
-base_url: yjunechoe.github.io
+base_url: https://yjunechoe.github.io
 preview: preview.png
 author:
   - name: June Choe
