--- a/_posts/2020-08-04-tidytuesday-2020-week-32/tidytuesday-2020-week-32.Rmd
+++ b/_posts/2020-08-04-tidytuesday-2020-week-32/tidytuesday-2020-week-32.Rmd
@@ -6,7 +6,7 @@ categories:
   - tidytuesday
   - data visualization
   - ggplot2
-base_url: yjunechoe.github.io
+base_url: https://yjunechoe.github.io
 author:
   - name: June Choe
     affiliation: University of Pennsylvania Linguistics
