--- a/_posts/2020-08-07-saving-a-line-of-piping/saving-a-line-of-piping.Rmd
+++ b/_posts/2020-08-07-saving-a-line-of-piping/saving-a-line-of-piping.Rmd
@@ -5,7 +5,7 @@ description: |
 categories:
   - data wrangling
   - dplyr
-base_url: yjunechoe.github.io
+base_url: https://yjunechoe.github.io
 author:
   - name: June Choe
     affiliation: University of Pennsylvania Linguistics
