--- a/_posts/2020-08-17-tidytuesday-2020-week-33/tidytuesday-2020-week-33.Rmd
+++ b/_posts/2020-08-17-tidytuesday-2020-week-33/tidytuesday-2020-week-33.Rmd
@@ -6,7 +6,7 @@ categories:
   - tidytuesday
   - gganimate
   - ggplot2
-base_url: yjunechoe.github.io
+base_url: https://yjunechoe.github.io
 author:
   - name: June Choe
     affiliation: University of Pennsylvania Linguistics
