--- a/_posts/2020-09-06-fonts-for-graphs/2020-09-06-fonts-for-graphs.Rmd
+++ b/_posts/2020-09-06-fonts-for-graphs/2020-09-06-fonts-for-graphs.Rmd
@@ -5,7 +5,7 @@ description: |
 categories:
   - data visualization
   - typography
-base_url: yjunechoe.github.io
+base_url: https://yjunechoe.github.io
 preview: preview.png
 author:
   - name: June Choe
