--- a/_posts/2020-09-12-videos-in-reactable/2020-09-12-videos-in-reactable.Rmd
+++ b/_posts/2020-09-12-videos-in-reactable/2020-09-12-videos-in-reactable.Rmd
@@ -5,7 +5,7 @@ description: |
 categories:
   - reactable
   - data visualization
-base_url: yjunechoe.github.io
+base_url: https://yjunechoe.github.io
 author:
   - name: June Choe
     affiliation: University of Pennsylvania Linguistics
