--- a/_posts/2020-09-23-tidytuesday-2020-week-39/tidytuesday-2020-week-39.Rmd
+++ b/_posts/2020-09-23-tidytuesday-2020-week-39/tidytuesday-2020-week-39.Rmd
@@ -6,7 +6,7 @@ categories:
   - ggplot2
   - data visualization
   - tidytuesday
-base_url: yjunechoe.github.io
+base_url: https://yjunechoe.github.io
 author:
   - name: June Choe
     affiliation: University of Pennsylvania Linguistics
